welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: type mismatch;
 found   : Int
 required: Boolean
      return (nums(i + 1))
                  ^